--- a/index.html
+++ b/index.html
@@ -5,10 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drawing App</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
         canvas {
             touch-action: none; /* Required for pressure sensitivity */
+        }
+        .room-controls {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            background: #f5f5f5;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .room-controls button, .room-controls input {
+            margin: 0;
+            padding: 8px 16px;
+            background: #fff;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .room-controls input {
+            width: 150px;
+        }
+        #roomCodeDisplay {
+            margin-left: 10px;
+            font-size: 14px;
+            color: #333;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1001;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+            padding-top: 60px;
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 400px;
+            border-radius: 8px;
+            position: relative;
+            left: 20px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .modal-content div {
+            margin-bottom: 10px;
+        }
+        #roomCodeContainer {
+            margin-top: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        #copyRoomCode {
+            padding: 5px 10px;
+            background: #2196f3;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -56,6 +139,31 @@
             <button id="deleteLayer">Delete Layer</button>
             <button id="moveLayerDown">Move Down</button>
             <button id="moveLayerUp">Move Up</button>
+        </div>
+    </div>
+    <div class="room-controls">
+        <button id="createRoom">Create Room</button>
+        <input type="text" id="roomCode" placeholder="Enter Room Code">
+        <button id="joinRoom">Join Room</button>
+        <div id="roomCodeDisplay"></div>
+    </div>
+    <div id="roomModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeModal">&times;</span>
+            <h2>Create Room</h2>
+            <div>
+                <label for="canvasWidth">Canvas Width:</label>
+                <input type="number" id="canvasWidth" value="1920">
+            </div>
+            <div>
+                <label for="canvasHeight">Canvas Height:</label>
+                <input type="number" id="canvasHeight" value="1080">
+            </div>
+            <div>
+                <label for="canvasColor">Canvas Color:</label>
+                <input type="color" id="canvasColor" value="#ffffff">
+            </div>
+            <button id="confirmCreateRoom">Create</button>
         </div>
     </div>
     <script src="app.js"></script>
